hphp/test/slow/ctor_param_promotion_bad_mod.php.expectf
Fatal error: A type specifier is expected here. in %s/test/slow/ctor_param_promotion_bad_mod.php on line 7